observability/expose-dashboards/dashboard-virtual-services.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: dashboards-vs
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - dashboards-gateway
  http:
  - name: grafana
    match:
    - uri:
        prefix: "/grafana/"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: grafana
        port: 
          number: 3000      
  - name: prometheus
    match:
    - uri:
        prefix: "/prometheus/"
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 9090
        host: prometheus
  - name: kiali
    match:
    - uri:
        prefix: "/kiali/"
    rewrite:
      uri: "/kiali/"
    route:
    - destination:
        port:
          number: 20001
        host: kiali
  - name: tracing
    match:
    - uri:
        prefix: "/jaeger/"
    rewrite:
      uri: "/jaeger/"
    route:
    - destination:
        port:
          number: 80
        host: tracing
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: grafana
  namespace: istio-system
spec:
  host: grafana
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: prometheus
  namespace: istio-system
spec:
  host: prometheus
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: kiali
  namespace: istio-system
spec:
  host: kiali
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: tracing
  namespace: istio-system
spec:
  host: tracing
